# Credit-Card-Approval-Project

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yaml  entrypoint.sh  environment.env  exc_handlers.py  middleware.py  module_constraints.txt  module_requirements.txt  py_logging.py  pyproject.toml  rest_controllers.py  settings.py  tox.ini
.github/workflows/: continious-integration.yml  email_notify.yml
baseline/: data.py  metrics.py  system.py
calibration/: calibrators.py  plots.py
data/processed_data/: calibration_set.csv  testing_set.csv  training_set.csv  validation_set.csv
deployment/: build.sh  database.sh  docker-compose.yaml  entrypoint.sh  recreate_image.sh
deployment/nginx/: nginx.conf
deployment/pgadmin-data/: pgadmin4.db
docs/: CLI.md  DEV.md  LOCAL_DEV.md  README.md
env/: database.env
integration/database/: test_connection.py
kubernetes/: Ingress.yaml  application.yaml  database.yaml  maps.yaml  secrets.yaml
nginx/: nginx.conf
proj_requirements/: dev_constraints.txt  dev_requirements.txt  module_constraints.txt  module_requirements.txt  prod_constraints.txt  prod_requirements.txt
references/eda/: Analysis.ipynb
references/local/: LOCAL_INTERPRETIBILITY.ipynb
src/: rest_controllers.py  settings.py
src/calibrators/: platt_calibrator.pkl
src/cleansing/: EDA-Analysis.ipynb  FEATURES.md  clean.py  constants.py  sampling.py
src/cleansing/.ipynb_checkpoints/: EDA-Analysis-checkpoint.ipynb
src/database/: alembic.ini  constants.py  db_controllers.py  db_manager.py  db_settings.py  models.py  sql_requests.py
src/database/alembic/: env.py
src/database/alembic/versions/: 8f77c38ef2ad_migrations.py  efdf877addc7_second_migration.py
src/database/alembic_migrations/: env.py
src/evaluation/: cross_evaluation.py
src/modeling/: constants.py  exceptions.py  feature_form.py  modeling.py
src/models/: classifier.pkl
src/offline_training/: .credit_record.csv.icloud  Analysis.ipynb  FEATURES.md  Preprocessing.ipynb  SemiSupervisedLearning.ipynb  Training.ipynb  classifier.pkl  constants.py  encoders.py  feature_constants.py  features.py  testing_set.csv  training_set.csv  validation_set.csv
src/offline_training/.ipynb_checkpoints/: Analysis-checkpoint.ipynb  SemiSupervisedLearning-checkpoint.ipynb  Training-checkpoint.ipynb
src/processed_data/: testing_set.csv  training_set.csv
src/web/: exception_handlers.py  exceptions.py  middlewares.py  rest_controllers.py  settings.py
tests/database/: test_controllers.py
tests/ml/: test_models.py
tests/web/: test_controllers.py
unittests/ml/: test_models.py  tests.py
unittests/web/: test_controllers.py
