[tool.poetry]
name = "credit-card-approval"
version = "0.1.0"
description = "Credit Card Approval ML Project"
authors = ["Kirill Klimushin Alexandrovich"]
readme = "README.md"
packages = [{include = "credit_card_approval"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.11.1"
psycopg = "^3.1.9"

[tool.poetry.group.dev.dependencies]
imbalanced-learn = "0.10.1"
jupyter = "1.0.0"
matplotlib = "3.7.1"
pydantic = "1.10.9"
pytest = "7.4.0"
scikit-learn = "1.2.2"
seaborn = "0.12.2"
fastapi = "0.97.0"
uvicorn = "0.22.0"
xgboost = "1.7.6"
autopep8 = "2.0.2"
flake8 = "6.0.0"
alembic = "^1.11.1"
sqlalchemy = "^2.0.19"
psycopg = "^3.1.9"

[tool.pytest.ini_options]
minversion = "7.4.0"
add_opts = ""
testpaths = [
    "tests",
    "integration"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
